@@ -1,35 +1,31 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.config.server.session;
 
-import com.google.common.collect.ImmutableList;
 import com.yahoo.component.Version;
-import com.yahoo.config.model.api.ApplicationRoles;
 import com.yahoo.config.model.api.ContainerEndpoint;
 import com.yahoo.config.model.api.EndpointCertificateMetadata;
 import com.yahoo.config.model.api.Quota;
+import com.yahoo.config.model.api.TenantSecretStore;
 import com.yahoo.config.provision.ApplicationId;
 import com.yahoo.config.provision.AthenzDomain;
+import com.yahoo.config.provision.CloudAccount;
 import com.yahoo.config.provision.DockerImage;
 import com.yahoo.config.provision.TenantName;
 import com.yahoo.container.jdisc.HttpRequest;
 import com.yahoo.security.X509CertificateUtils;
-import com.yahoo.slime.ArrayTraverser;
 import com.yahoo.slime.Inspector;
 import com.yahoo.slime.Slime;
 import com.yahoo.slime.SlimeUtils;
 import com.yahoo.vespa.config.server.TimeoutBudget;
-import com.yahoo.config.model.api.TenantSecretStore;
 import com.yahoo.vespa.config.server.http.SessionHandler;
+import com.yahoo.vespa.config.server.tenant.CloudAccountSerializer;
 import com.yahoo.vespa.config.server.tenant.ContainerEndpointSerializer;
 import com.yahoo.vespa.config.server.tenant.EndpointCertificateMetadataSerializer;
 import com.yahoo.vespa.config.server.tenant.TenantSecretStoreSerializer;
-import org.eclipse.jetty.util.ssl.X509;
 
 import java.security.cert.X509Certificate;
 import java.time.Clock;
 import java.time.Duration;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -58,6 +54,7 @@ public final class PrepareParams {
     static final String FORCE_PARAM_NAME = "force";
     static final String WAIT_FOR_RESOURCES_IN_PREPARE = "waitForResourcesInPrepare";
     static final String OPERATOR_CERTIFICATES = "operatorCertificates";
+    static final String CLOUD_ACCOUNT = "cloudAccount";
 
     private final ApplicationId applicationId;
     private final TimeoutBudget timeoutBudget;
@@ -75,6 +72,7 @@ public final class PrepareParams {
     private final Optional<Quota> quota;
     private final List<TenantSecretStore> tenantSecretStores;
     private final List<X509Certificate> operatorCertificates;
+    private final Optional<CloudAccount> cloudAccount;
 
     private PrepareParams(ApplicationId applicationId, TimeoutBudget timeoutBudget, boolean ignoreValidationErrors,
                           boolean dryRun, boolean verbose, boolean isBootstrap, Optional<Version> vespaVersion,
@@ -82,7 +80,8 @@ public final class PrepareParams {
                           Optional<EndpointCertificateMetadata> endpointCertificateMetadata,
                           Optional<DockerImage> dockerImageRepository, Optional<AthenzDomain> athenzDomain,
                           Optional<Quota> quota, List<TenantSecretStore> tenantSecretStores,
-                          boolean force, boolean waitForResourcesInPrepare, List<X509Certificate> operatorCertificates) {
+                          boolean force, boolean waitForResourcesInPrepare, List<X509Certificate> operatorCertificates,
+                          Optional<CloudAccount> cloudAccount) {
         this.timeoutBudget = timeoutBudget;
         this.applicationId = Objects.requireNonNull(applicationId);
         this.ignoreValidationErrors = ignoreValidationErrors;
@@ -99,6 +98,7 @@ public final class PrepareParams {
         this.force = force;
         this.waitForResourcesInPrepare = waitForResourcesInPrepare;
         this.operatorCertificates = operatorCertificates;
+        this.cloudAccount = Objects.requireNonNull(cloudAccount);
     }
 
     public static class Builder {
@@ -116,10 +116,10 @@ public final class PrepareParams {
         private Optional<EndpointCertificateMetadata> endpointCertificateMetadata = Optional.empty();
         private Optional<DockerImage> dockerImageRepository = Optional.empty();
         private Optional<AthenzDomain> athenzDomain = Optional.empty();
-        private Optional<ApplicationRoles> applicationRoles = Optional.empty();
         private Optional<Quota> quota = Optional.empty();
         private List<TenantSecretStore> tenantSecretStores = List.of();
         private List<X509Certificate> operatorCertificates = List.of();
+        private Optional<CloudAccount> cloudAccount = Optional.empty();
 
         public Builder() { }
 
@@ -213,11 +213,6 @@ public final class PrepareParams {
             return this;
         }
 
-        public Builder applicationRoles(ApplicationRoles applicationRoles) {
-            this.applicationRoles = Optional.ofNullable(applicationRoles);
-            return this;
-        }
-
         public Builder quota(Quota quota) {
             this.quota = Optional.ofNullable(quota);
             return this;
@@ -252,8 +247,13 @@ public final class PrepareParams {
             return this;
         }
 
-        public Builder withOperatorCertificates(List<X509Certificate> operatorCertificates) {
+        public Builder operatorCertificates(List<X509Certificate> operatorCertificates) {
             this.operatorCertificates = List.copyOf(operatorCertificates);
+            return this;
+        }
+
+        public Builder cloudAccount(CloudAccount cloudAccount) {
+            this.cloudAccount = Optional.ofNullable(cloudAccount);
             return this;
         }
 
@@ -262,8 +262,9 @@ public final class PrepareParams {
                                      verbose, isBootstrap, vespaVersion, containerEndpoints,
                                      endpointCertificateMetadata, dockerImageRepository, athenzDomain,
                                      quota, tenantSecretStores, force, waitForResourcesInPrepare,
-                                     operatorCertificates);
+                                     operatorCertificates, cloudAccount);
         }
+
     }
 
     public static PrepareParams fromHttpRequest(HttpRequest request, TenantName tenant, Duration barrierTimeout) {
@@ -295,7 +296,7 @@ public final class PrepareParams {
                 .timeoutBudget(SessionHandler.getTimeoutBudget(getTimeout(params, barrierTimeout)))
                 .applicationId(createApplicationId(params, tenant))
                 .vespaVersion(SlimeUtils.optionalString(params.field(VESPA_VERSION_PARAM_NAME)).orElse(null))
-                .containerEndpointList(deserialize(params.field(CONTAINER_ENDPOINTS_PARAM_NAME), ContainerEndpointSerializer::endpointListFromSlime, Collections.emptyList()))
+                .containerEndpointList(deserialize(params.field(CONTAINER_ENDPOINTS_PARAM_NAME), ContainerEndpointSerializer::endpointListFromSlime, List.of()))
                 .endpointCertificateMetadata(deserialize(params.field(ENDPOINT_CERTIFICATE_METADATA_PARAM_NAME), EndpointCertificateMetadataSerializer::fromSlime))
                 .dockerImageRepository(SlimeUtils.optionalString(params.field(DOCKER_IMAGE_REPOSITORY)).orElse(null))
                 .athenzDomain(SlimeUtils.optionalString(params.field(ATHENZ_DOMAIN)).orElse(null))
@@ -303,13 +304,15 @@ public final class PrepareParams {
                 .tenantSecretStores(deserialize(params.field(TENANT_SECRET_STORES_PARAM_NAME), TenantSecretStoreSerializer::listFromSlime, List.of()))
                 .force(booleanValue(params, FORCE_PARAM_NAME))
                 .waitForResourcesInPrepare(booleanValue(params, WAIT_FOR_RESOURCES_IN_PREPARE))
-                .withOperatorCertificates(deserialize(params.field(OPERATOR_CERTIFICATES), PrepareParams::readOperatorCertificates, Collections.emptyList()))
+                .operatorCertificates(deserialize(params.field(OPERATOR_CERTIFICATES), PrepareParams::readOperatorCertificates, List.of()))
+                .cloudAccount(deserialize(params.field(CLOUD_ACCOUNT), CloudAccountSerializer::fromSlime, null))
                 .build();
     }
 
     private static <T> T deserialize(Inspector field, Function<Inspector, T> mapper) {
         return deserialize(field, mapper, null);
     }
+
     private static <T> T deserialize(Inspector field, Function<Inspector, T> mapper, T defaultValue) {
         return field.valid()
                 ? mapper.apply(field)
@@ -318,13 +321,11 @@ public final class PrepareParams {
 
     private static boolean booleanValue(Inspector inspector, String fieldName) {
         Inspector field = inspector.field(fieldName);
-        return field.valid()
-                ? field.asBool()
-                : false;
+        return field.valid() && field.asBool();
     }
 
     private static Duration getTimeout(Inspector params, Duration defaultTimeout) {
-        if(params.field("timeout").valid()) {
+        if (params.field("timeout").valid()) {
             return Duration.ofSeconds(params.field("timeout").asLong());
         } else {
             return defaultTimeout;
@@ -419,4 +420,9 @@ public final class PrepareParams {
     public List<X509Certificate> operatorCertificates() {
         return operatorCertificates;
     }
+
+    public Optional<CloudAccount> cloudAccount() {
+        return cloudAccount;
+    }
+
 }
